# small-webrtc-prebuilt

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: build.yml  publish-test.yml  publish.yml
client/: index.html  package-lock.json  package.json
client/src/: MoqDemo.tsx  index.tsx  style.css
pipecat_ai_prebuilt/: frontend.py
pipecat_ai_small_webrtc_prebuilt/: frontend.py
scripts/: local_build.sh
test/: README.md  bot-cascade.py  bot-gemini-live.py  bot.py  env.example  pyproject.toml
