[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "pipecat-ai-small-webrtc-prebuilt"
dynamic = ["version"]
description = "A simple, ready-to-use client for testing the SmallWebRTCTransport."
license = { text = "BSD 2-Clause License" }
readme = "README.md"
requires-python = ">=3.10"
keywords = ["webrtc", "pipecat", "voice", "ai"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Communications :: Conferencing",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Video",
]

# List your package dependencies
dependencies = [
    "fastapi[all]",  # Required at runtime
]

[dependency-groups]
dev = [
    "setuptools~=78.1.1",
    "setuptools_scm~=8.3.1",
    "build~=1.2.2",
]

[project.urls]
homepage = "https://github.com/pipecat-ai/small-webrtc-prebuilt"
source = "https://github.com/pipecat-ai/small-webrtc-prebuilt"
issues = "https://github.com/pipecat-ai/small-webrtc-prebuilt/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["pipecat_ai_small_webrtc_prebuilt*"]

[tool.setuptools.package-data]
"pipecat_ai_small_webrtc_prebuilt" = ["client/dist/**/*"]

[tool.setuptools_scm]
local_scheme = "no-local-version"
fallback_version = "0.0.0-dev"

