[project]
name = "pipecat-quickstart"
version = "0.1.0"
description = "Quickstart example for building voice AI bots with Pipecat"
requires-python = ">=3.11"
dependencies = [
    "pipecat-ai[google,daily,silero,webrtc,runner]>=1.0.0",
    "pipecat-ai-prebuilt"
]

[tool.uv.sources]
pipecat-ai-prebuilt = { path = "../", editable = true }

[dependency-groups]
dev = [
    "pyright>=1.1.404,<2",
    "ruff>=0.12.11,<1",
]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["I"]